[FIX] web: ControlPanel's TopBar spacing & animation
This commit applies some DOM and styling cleanup to the
TopBar/EmbeddedActions in the ControlPanel.

In a nutshell:
- less DOM nodes/CSS rules
- uses isSmall to actually removes elements from the DOM instead of
  hidding them with responsive classes.
- removes the unnecessary spacing at the top of the ControlPanel on
  small screens
- thin side lines' color match borders' (specially visible in dark mode)
- smoother animation using Transition component
- use same icon in desktop & mobile

task-3336242

closes odoo/odoo#170980

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -53,12 +53,6 @@
     }
 }
 
-.o_embedded_line {
-    flex: 1 1 0%;
-    height: 1px;
-    background-color: #ddd;
-}
-
 .o_dragged_embedded_action {
     transition: transform 0.5s;
     transform: rotate(2deg);
@@ -66,20 +60,20 @@
 }
 
 .o_embedded_actions {
-    opacity: 0;
-    max-height: 0;
-    align-self: center;
-    overflow: hidden;
-    transition: opacity 0.5s, max-height 1.0s ease;
-}
-
-.o_embedded_actions_buttons_wrapper {
-    max-width: 80%;
-}
-
-.o_embedded_actions.visible {
-    opacity: 1;
     max-height: 500px;
+    transition: opacity 0.5s, max-height 0.5s ease;
+
+    &.o-fade-leave, &.o-fade-enter {
+        opacity: 0;
+        max-height: 0;
+    }
+
+    &::before, &::after {
+        flex: 1 1 0;
+        height: 1px;
+        background-color: $border-color;
+        content: "";
+    }
 }
 
 .o_save_current_view {
